<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/mainScrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:animateLayoutChanges="true"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".ui.discover.fragments.DiscoverFragment">

            <LinearLayout
                android:id="@+id/top_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <LinearLayout
                    android:id="@+id/textLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        app:srcCompat="@drawable/ic_sharp_search" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textField"
                        style="@style/Widget.TEDiscover.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:hint="@string/enter_what_interesting_you"
                        android:paddingStart="4dp"
                        android:paddingTop="4dp"
                        android:paddingBottom="4dp"
                        app:boxCornerRadiusBottomEnd="14dp"
                        app:boxCornerRadiusBottomStart="14dp"
                        app:boxCornerRadiusTopEnd="14dp"
                        app:boxCornerRadiusTopStart="14dp"
                        app:boxStrokeWidth="1dp"
                        app:helperTextTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:maxLines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activeFiltersLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/activeFiltersText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="4dp"
                        android:text="@string/active_filters"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Overline"
                        android:textSize="11sp" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/query_choices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/searchview_backgound"
                    android:baselineAligned="false"
                    android:orientation="vertical"
                    android:padding="6dp"
                    app:layout_anchor="@id/textLinearLayout"
                    app:layout_anchorGravity="bottom">

                    <TextView
                        android:id="@+id/filters_layout_hint"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/add_filters_to_your_search"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                        android:padding="8dp"/>

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chipGroupFilters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    </com.google.android.material.chip.ChipGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/buttonLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:weightSum="2"
                    app:layout_anchor="@id/query_choices"
                    app:layout_anchorGravity="bottom">


                    <ImageView
                        android:layout_width="76dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:src="@color/transparent" />

                    <Button
                        android:id="@+id/clearAll"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_weight="0.7"
                        android:text="@string/skip" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="0.8"
                        android:text="@string/submit" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:orientation="vertical"
                    android:padding="8dp"
                    app:layout_anchor="@id/query_choices"
                    app:layout_anchorGravity="bottom">

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="12dp"
                        android:background="?attr/dividerHorizontal" />

                    <TextView
                        android:id="@+id/duration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/rubik_light"
                        android:text="@string/duration"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:id="@+id/linearLayoutDuration"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupDuration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_minutes_6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes_6" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_minutes_12"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes_12" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_minutes_18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes_18" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_minutes_long"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minutes_long" />

                        </com.google.android.material.chip.ChipGroup>

                    </LinearLayout>

                    <View
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="?attr/dividerHorizontal" />

                    <TextView
                        android:id="@+id/topics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/rubik_light"
                        android:text="@string/topics"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:id="@+id/linearLayoutTopics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupTopics"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_technology"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/topic_technology" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_entertainment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/topic_entertainment" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_design"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/topic_design" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_business"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/topic_business" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_science"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/topic_science" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_global_issues"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/topic_global_issues" />

                        </com.google.android.material.chip.ChipGroup>

                    </LinearLayout>

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="12dp"
                        android:background="?attr/dividerHorizontal" />

                    <TextView
                        android:id="@+id/sort_by"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/rubik_light"
                        android:text="@string/sort_by"
                        android:textAllCaps="true"
                        android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Headline6"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <LinearLayout
                        android:id="@+id/linearLayoutSortBy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <com.google.android.material.chip.ChipGroup
                            android:id="@+id/chipGroupSortBy"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:singleSelection="true">

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_newest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/newest" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_relevance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/relevance" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_oldest"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/oldest" />

                            <com.google.android.material.chip.Chip
                                android:id="@+id/chip_most_viewed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/most_viewed" />

                        </com.google.android.material.chip.ChipGroup>


                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


    </FrameLayout>


</layout>