<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/signupLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".fragments.SignupFragment">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldUsername"
            style="@style/Widget.TEDiscover.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_margin="16dp"
            app:helperTextTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldEmail"
            style="@style/Widget.TEDiscover.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp"
            app:helperTextTextAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/emailTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="16dp"
            android:maxLines="1"
            android:text="@string/please_make_sure_to_fill_a_valid_email_address"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextFieldPassword"
            style="@style/Widget.TEDiscover.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="16dp"
            android:text="@string/please_choose_a_password_with_a_length_of_at_least_6_characters"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Caption"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:layout_margin="24dp"
            android:layout_marginTop="220dp"
            android:fontFamily="@font/rubik"
            android:text="@string/register"
            app:elevation="4dp" />

    </LinearLayout>
</layout>