<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/bottom_drawer_2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:id="@+id/saveTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="Save to..."
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

            <Button
                android:id="@+id/createNew"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:text="@string/create_new_playlist"
                 />

        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:background="#1A000000" />

        <LinearLayout
            android:id="@+id/playlistLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/playlist_layout_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/seems_like_you_don_t_have_any_playlists_yet"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:padding="8dp"/>


        </LinearLayout>

        <View
            android:id="@+id/divider4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="4dp"

            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:background="#1A000000" />

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/rubik"
            android:minHeight="48dp"
            android:text="@string/done" />

    </LinearLayout>
</layout>
